--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,3 +1,4 @@
+/* dm-sans-regular - latin */
 @font-face {
   font-family: "DM Sans";
   font-style: normal;
@@ -32,7 +33,8 @@
   font-family: "DM Sans";
   font-style: italic;
   font-weight: 500;
-  src: local(""), url("../assets/fonts/") format("woff2"),
+  src: local(""),
+    url("../assets/fonts/dm-sans-v11-latin-500italic.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
       url("../assets/fonts/dm-sans-v11-latin-500italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
