--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -28,7 +28,7 @@
     left: 0;
     height: 300px;
     display: flex;
-    top: 50px;
+    top: 0;
     background-color: #4a5240;
     flex-direction: column;
     width: 100vw;
@@ -68,6 +68,7 @@
   &__list.active {
     transform: translateX(0%);
     transition: transform 0.5s ease-in;
+    z-index: 2;
   }
 
   &__navitem::before {
@@ -98,6 +99,7 @@
     }
   }
   &__burger {
+    z-index: 10;
     display: block;
     width: 35%;
     cursor: pointer;
@@ -158,6 +160,7 @@
     display: flex;
     // transform: translateX(0%);
     transition: transform 0.5s ease-in;
+    z-index: 2;
   }
   &__shopcontainer {
     margin-top: 90px;
