--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -102,6 +102,7 @@
     z-index: 10;
     display: block;
     width: 35%;
+    margin-left: 10px;
     cursor: pointer;
     div {
       width: 25px;
@@ -127,7 +128,7 @@
     width: 35%;
     justify-content: flex-end;
     padding: 10px;
-    margin-right: 0;
+    margin-right: 10px;
     i {
       cursor: pointer;
     }
