--- a/src/scss/_checkout.scss
+++ b/src/scss/_checkout.scss
@@ -12,11 +12,13 @@
   }
 
   &__container {
+    margin-top: 7px;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 25px;
-    padding-bottom: 70px;
+    // padding: 25px;
+    // padding-bottom: 70px;
     * {
       border: none;
       transition: all 0.2s linear;
@@ -94,6 +96,7 @@
 #showcart {
   font-size: 16px;
   padding: 10px 0;
+  cursor: pointer;
   @include m.desktop {
     display: none;
   }
@@ -110,6 +113,7 @@
     padding-bottom: 10px;
     margin: 20px 0;
     font-size: 20px;
+    text-transform: uppercase;
   }
 }
 
@@ -120,9 +124,9 @@
   justify-content: space-between;
   width: 100%;
   background-color: #f4f3ee;
-
+  overflow: auto;
   @include m.desktop {
-    height: 90vh;
+    height: 93vh;
   }
 }
 
@@ -142,7 +146,7 @@
   }
 
   &__prodcard {
-    height: 100px;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
     color: black;
