--- a/src/scss/_checkout.scss
+++ b/src/scss/_checkout.scss
@@ -13,7 +13,6 @@
 
   &__container {
     margin-top: 7px;
-    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -119,6 +118,7 @@
 
 .cartcontainer {
   display: flex;
+  padding: 20px;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
@@ -126,7 +126,6 @@
   background-color: #f4f3ee;
   overflow: auto;
   @include m.desktop {
-    height: 93vh;
   }
 }
 
