--- a/src/scss/_checkout.scss
+++ b/src/scss/_checkout.scss
@@ -146,7 +146,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  background-color: #f4f3ee;
+  background-color: m.$background;
 
   @include m.desktop {
     height: 90vh;
