--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,13 +1,28 @@
 // Colors
 
 $green: #4a5240;
-$background: #f4f2f2;
+$background: #f4f3ee;
 
-// Font
 
 // Button
 
-// Breakpoints
+@mixin button {
+  font-family: 'DM Sans';
+  text-decoration: none;
+  border: none;
+  background-color: $green;
+  color: white;
+  transition-duration: 0.4s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: transparent;
+      color: $green;
+      border: 2px solid $green;
+    }
+}
+
+// Breakpoint
 
 @mixin desktop {
   @media screen and (min-width: 826px) {
