--- a/src/scss/_checkout.scss
+++ b/src/scss/_checkout.scss
@@ -16,8 +16,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    // padding: 25px;
-    // padding-bottom: 70px;
+
     * {
       border: none;
       transition: all 0.2s linear;
@@ -38,13 +37,9 @@
       text-transform: uppercase;
     }
     button {
+      @include m.button;
       width: 250px;
       height: 50px;
-      background-color: m.$green;
-      color: white;
-      font-weight: 700;
-      font-size: 18px;
-      cursor: pointer;
       margin-top: 10px;
     }
   }
@@ -58,7 +53,7 @@
     input {
       border-radius: 10px;
       width: 90%;
-      border: 1px solid #ccc;
+      border: 1px solid m.$border;
       padding: 10px 15px;
       font-size: 15px;
     }
@@ -96,6 +91,7 @@
   font-size: 16px;
   padding: 10px 0;
   cursor: pointer;
+
   @include m.desktop {
     display: none;
   }
@@ -123,7 +119,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  background-color: #f4f3ee;
+  background-color: m.$background;
   overflow: auto;
   @include m.desktop {
   }
