--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -27,7 +27,7 @@
   flex-direction: column;
   align-items: center;
   input {
-    border: 1px solid #ccc;
+    border: 1px solid m.$border;
     padding: 10px 15px;
     margin: 0 0 2 0;
     border-radius: 10px;
@@ -40,26 +40,7 @@
       border: 1px solid #000;
     }
   }
-  // // &__name {
-  // //   text-align: center;
-  // //   width: 250px;
-  // //   border-radius: 10px;
-  // //   height: 25px;
-  // //   @include m.desktop {
-  // //     width: 250px;
-  // //     height: 40px;
-  // //   }
-  // // }
-  // // &__email {
-  // //   text-align: center;
-  // //   width: 250px;
-  // //   height: 25px;
-  // //   border-radius: 10px;
-  // //   @include m.desktop {
-  // //     width: 250px;
-  // //     height: 40px;
-  // //   }
-  // }
+
   &__message {
     text-align: initial;
     height: 70%;
