--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -154,7 +154,7 @@
   &__shop {
     width: 80vw;
     display: none;
-    background-color: #f4f3ee;
+    background-color: m.$background;
     position: absolute;
     right: 0;
     top: 0;
