Styling input field

--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -44,6 +44,8 @@
   &__message {
     text-align: initial;
     height: 70%;
+    padding: 10px;
+    border: 1px solid m.$border;
     border-radius: 10px;
     @include m.desktop {
       width: 500px;
@@ -56,6 +58,7 @@
     color: white;
     padding: 20 40 20 40px;
     border-radius: 10px;
+    margin-top: 10px;
     @include m.desktop {
       padding: 20 60 20 60;
     }
