--- a/src/scss/_checkout.scss
+++ b/src/scss/_checkout.scss
@@ -102,7 +102,7 @@
 }
 
 .titlecontainer {
-  width: 100%;
+  // width: 100%;
   display: flex;
   justify-content: center;
 
@@ -118,7 +118,7 @@
 
 .cartcontainer {
   display: flex;
-  padding: 20px;
+  padding: 20 0 20 0px;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
