--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -43,7 +43,8 @@
 
   &__message {
     text-align: initial;
-    height: 70%;
+    max-width: 51%;
+    min-height: 50%;
     padding: 10px;
     border: 1px solid m.$border;
     border-radius: 10px;
