--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -9,3 +9,22 @@ body {
 .overflow-hidden {
   overflow: hidden;
 }
+
+.burgerbackground {
+  position: fixed;
+  background-color: black;
+  height: 100%;
+  width: 100vw;
+  opacity: 0.2;
+  top: 0;
+  z-index: 1;
+}
+.cartbackground {
+  opacity: 0.2;
+  position: fixed;
+  background-color: black;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+}
