--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -161,7 +161,6 @@
     }
   }
   &__shop {
-    // width: 80vw;
     box-sizing: border-box;
     background-color: m.$background;
     position: absolute;
@@ -176,7 +175,7 @@
   &__shop.active {
     display: flex;
     transform: translatex(0%);
-    width: 400px;
+    width: 75%;
     z-index: 2;
     @include m.desktop {
       width: 400px;
@@ -226,12 +225,10 @@
     right: 10;
   }
   &__shop__checkoutbutton {
+    @include m.button;
     width: 80%;
     height: 80%;
     margin-top: 10px;
-    border: none;
-    background-color: m.$green;
-    color: white;
   }
 
   &__shopheading {
@@ -260,10 +257,8 @@
   justify-content: space-between;
 
   button {
-    border: none;
+    @include m.button;
     font-size: 14px;
-    background-color: m.$green;
-    color: white;
     padding: 3px 5px;
     border-radius: 50%;
   }
