--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -164,21 +164,22 @@
     box-sizing: border-box;
     background-color: m.$background;
     position: absolute;
+    width: 75%;
+
     right: 0;
-    transform: translatex(100%);
+    transform: translateX(100%);
     top: 0;
     transition: transform 0.4s;
     height: 100vh;
     @include m.desktop {
+      width: 400px;
     }
   }
   &__shop.active {
     display: flex;
-    transform: translatex(0%);
-    width: 75%;
+    transform: translateX(0%);
     z-index: 2;
     @include m.desktop {
-      width: 400px;
     }
   }
   &__shopcontainer {
