--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -88,6 +88,15 @@
     left: 0;
     right: auto;
   }
+  &__navitemactive::before {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: rgb(255, 255, 255);
+  }
 
   &__burger.active {
     height: 29px;
