--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -9,6 +9,8 @@ $border: #ccc;
 // Button
 @mixin button {
   border: none;
+  border-radius: 5px;
+  font-weight: 600;
   padding: 10px;
   font-family: "DM Sans";
   font-size: 16px;
