Added styling and title to html

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -5,6 +5,7 @@ footer {
     height: 40vh;
     width: 100%;
     background-color: m.$green;
+    margin-top: 40px;
     
     @include m.desktop {
         flex-direction: row;
