--- a/src/scss/_faq.scss
+++ b/src/scss/_faq.scss
@@ -6,7 +6,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-top: 200px;
+    height: 60vh;
+    margin-top: 100px;
     gap: 10px;
     h2 {
         font-size: xx-large;
